leptos_macro/tests/view/59_two_components_one_error.stderr
error[E0308]: mismatched types
  --> tests/view/59_two_components_one_error.rs:11:25
   |
11 |             <Beta count="wrong"/>
   |                   ----- ^^^^^^^ expected `i32`, found `&str`
   |                   |
   |                   arguments to this method are incorrect
   |
note: method defined here
  --> tests/view/59_two_components_one_error.rs:23:9
   |
23 | fn Beta(count: i32) -> impl IntoView {
   |         ^^^^^-----
